--- a/src/global/styles/vars.sass
+++ b/src/global/styles/vars.sass
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap')
 // fonts
-$font-1: 'Open Sans', sans-serif
+$font-1: Courier, monospace
 .font-1-thin
   font-family: $font-1
   font-weight: 300
